SDIT-1174 prison-api CaseNoteResource
Use client id when calling these endpoints